@@ -2,6 +2,15 @@
 
         Reviewed by Eric Seidel.
 
+        Add export macros to profiler headers.
+        https://bugs.webkit.org/show_bug.cgi?id=27551
+
+        * profiler/Profiler.h:
+
+2011-06-08  Kevin Ollivier  <kevino@theolliviers.com>
+
+        Reviewed by Eric Seidel.
+
         Add export symbols to parser headers.
         https://bugs.webkit.org/show_bug.cgi?id=27551
 
